style: Fix weather indicators alignment

--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,7 @@
 
 .tooltip .tooltiptext {
   @apply absolute invisible text-white text-sm text-center rounded-full py-1 px-4 z-10 bg-gray-600;
-  right: -220%;
+  right: -230%;
 }
 
 .tooltip:hover .tooltiptext {
